custom-resources/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: cilium
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - name: webservice
      protocol: HTTPS
      port: 443
      hostname: web.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: web-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: board
      protocol: HTTPS
      port: 443
      hostname: board.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: board-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: workflow
      protocol: HTTPS
      port: 443
      hostname: workflow.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: workflow-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: renovate
      protocol: HTTPS
      port: 443
      hostname: renovate.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: renovate-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: mogenius
      protocol: HTTPS
      port: 443
      hostname: mogenius.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: mogenius-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: argo-workflows
      protocol: HTTPS
      port: 443
      hostname: argo-workflows.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: argo-workflows-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: argocd
      protocol: HTTPS
      port: 443
      hostname: argocd.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: status
      protocol: HTTPS
      port: 443
      hostname: status.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: status-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: kagent
      protocol: HTTPS
      port: 443
      hostname: kagent.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: kagent-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: renovate-webhooks
      protocol: HTTPS
      port: 443
      hostname: renovate-webhooks.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: renovate-webhooks-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: homelab-agent
      protocol: HTTPS
      port: 443
      hostname: agent.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: agent-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: vault
      protocol: HTTPS
      port: 443
      hostname: vault.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: vault-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: json
      protocol: HTTPS
      port: 443
      hostname: json.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: json-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: motion
      protocol: HTTPS
      port: 443
      hostname: motion.hankeln.work
      tls:
        mode: Terminate
        certificateRefs:
          - name: motion-hankeln-tls
      allowedRoutes:
        namespaces:
          from: All
